manifests/istio-envoy-services-cluster.yaml
# Without this calls to the auth service will fail with a Downstream protocol error.
# Related to https://github.com/istio/istio/issues/21841
# as of Oct 7th Istio is working for first class support for ext_authz https://github.com/istio/istio/issues/27790
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoy-services-cluster-add
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: CLUSTER
    match:
      context: "GATEWAY"
    patch:
      operation: ADD
      value:
        name: envoy-services-cluster
        type: EDS
        connect_timeout: 0.25s
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        eds_cluster_config:
            eds_config:
                ads: {}
                resource_api_version: "V3"
            service_name: "outbound|50051||envoy-services.ssn.svc.cluster.local"
